fix work speed/yield stats

--- a/Source/OmniCoreDrill/[Generated]/Defs.tt
+++ b/Source/OmniCoreDrill/[Generated]/Defs.tt
@@ -12,6 +12,7 @@
 
 	SetNamespace("DoctorVanGogh.OmniCoreDrill");
 
+	AddDef<StatDef>("MiningYield");
 	AddDef<StatDef>("MiningSpeed");
 	AddDef<StatDef>("MaxHitPoints");
 
